apps/threat-intell/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: threat-intel
  labels:
    environment: prod
    app.kubernetes.io/part-of: threat-intel
